src/objects/SObjectType__c.object
<CustomObject>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Prefix__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Key Prefix</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plural_Label__c</fullName>
        <label>Plural Label</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starts_With_Vowel_Sound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starts With Vowel Sound</label>
        <type>Checkbox</type>
    </fields>
    <label>SObjectType</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SObjectTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>